src/objects/DD_Reserved_Product__c.object
<CustomObject>
    <description>***Demo Depot application*** 
This will store Reserved Products detail for a Demo Request.</description>
    <fields>
        <fullName>CALL_T__c</fullName>
        <description>Created for Integration</description>
        <label>CALL__T</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>This will store when product actually avaiable again. Value of this field will be updated from DFW/Tesseract</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Request__c</fullName>
        <label>Demo Request</label>
        <referenceTo>DD_Demo__c</referenceTo>
        <relationshipName>Reserved_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date(DFW)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IR_Number_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>IR Number (External Id)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IR_Number__c</fullName>
        <displayFormat>IR{000000}</displayFormat>
        <externalId>true</externalId>
        <label>IR Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IR_Status__c</fullName>
        <label>IR Status(DFW)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <referenceTo>DD_Master_Demo_Products__c</referenceTo>
        <relationshipName>Reserved_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family(DFW)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name (DFW)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ordered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrapped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>text(Material__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_WrittenOff__c</fullName>
        <description>This is look up to Product writtenOff.  When  status =&quot;write off&quot; then this field should be filled.</description>
        <label>Product WrittenOff</label>
        <referenceTo>DD_Product_WrittenOff__c</referenceTo>
        <relationshipName>Reserved_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RB_ITEM_NO__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>RB_ITEM_NO</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>This will store recieve date for the product. value will be updated from DFW/tesseract</description>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Serial__c</fullName>
        <label>Return Serial #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serialnumber__c</fullName>
        <label>Serial number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <formula>Demo_Request__r.Shipped_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SyncedTime__c</fullName>
        <label>Synced Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>This will store theater information from  demo Account&apos;s manager</description>
        <formula>TEXT( Demo_Request__r.Account_Manager__r.Theater__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theater</label>
        <type>Text</type>
    </fields>
    <label>Selected Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Material__c</columns>
        <columns>Demo_Request__c</columns>
        <columns>Product_Status__c</columns>
        <columns>Quantity__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RES-PART-{00000}</displayFormat>
        <label>Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>